--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.7.22
 chardet==5.2.0
 charset-normalizer==3.3.1
 click==8.1.7
+cloudinary==1.36.0
 contourpy==1.1.1
 cycler==0.12.1
 emoji==2.8.0
