--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
 blinker==1.6.3
 certifi==2023.7.22
 chardet==5.2.0
@@ -10,6 +14,7 @@ emoji==2.8.0
 Flask==3.0.0
 Flask-Cors==4.0.0
 fonttools==4.43.1
+frozenlist==1.4.0
 funcy==2.0
 gensim==4.3.2
 idna==3.4
@@ -20,9 +25,11 @@ kiwisolver==1.4.5
 leia-br==0.0.1
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+multidict==6.0.4
 nltk==3.8.1
 numexpr==2.8.7
 numpy==1.26.1
+openai==0.28.1
 packaging==23.2
 pandas==2.1.1
 Pillow==10.1.0
@@ -45,3 +52,4 @@ urllib3==2.0.7
 vaderSentiment==3.3.2
 Werkzeug==3.0.1
 wordcloud==1.9.2
+yarl==1.9.2
